<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#DDDDDD">

        <TextView android:text="@string/aboutTxt1"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingLeft="20dp"
                  android:paddingRight="20dp"
                  android:background="#DDDDDD"
                  android:textColor="#222222"
        />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:visibility="invisible"
        />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/img_about_logo"
        />
        <TextView android:text="@string/aboutTxt2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="#DDDDDD"
            android:textColor="#222222"
        />
        <Button android:text="@string/close"
                android:id="@+id/closeAbout"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="#222222"
        />

    </LinearLayout>
</ScrollView>