<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:id="@+id/tutorialScreen"
    android:paddingTop="30dp">

    <ScrollView
        android:id="@+id/tutorialScroll"
        android:scrollbarFadeDuration="0"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:paddingBottom="70dp">

        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:orientation="vertical">

            <TextView android:id="@+id/tutorialTxt1"
                      android:text="@string/tutorialContent2_1"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:paddingTop="20dp"
                      android:paddingLeft="20dp"
                      android:paddingRight="20dp"
                      android:gravity="center"
                      android:textColor="#282828"
                      android:textSize="30sp"
                      android:shadowColor="#001355"
                      android:shadowRadius="1.6"
                      android:shadowDx="1.5"
                      android:shadowDy="1.3" />

            <TextView android:id="@+id/tutorialTxt2"
                      android:text="@string/tutorialContent2_2"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:paddingLeft="20dp"
                      android:paddingRight="20dp"
                      android:paddingTop="10dp"
                      android:textColor="#282828"
                      android:textSize="20sp" />

            <ImageView android:id="@+id/tutorialImg"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginRight="20dp"
                       android:layout_marginBottom="5dp"
                       android:layout_marginLeft="20dp"
                       android:layout_gravity="left"
                       android:padding="5dp"
                       android:src="@drawable/img_tutorial_quickaction" />

            <TextView android:id="@+id/tutorialTxt3"
                      android:text="@string/tutorialContent2_3"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:paddingLeft="20dp"
                      android:paddingRight="20dp"
                      android:paddingBottom="10dp"
                      android:textColor="#282828"
                      android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/tutorialNavigation"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="@drawable/graphics_tutorial_nav_bg">

        <Button android:id="@+id/prevTutorScreen"
                android:text="@string/previous"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_gravity="center_vertical|left"
                android:background="@drawable/img_tutorial_previous_selector"
                android:focusable="true"
                android:nextFocusRight="@+id/nextTutorScreen"
                android:textColor="#004EFF"
                android:textSize="17sp" />

        <Button android:id="@id/nextTutorScreen"
                android:text="@string/next"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/img_tutorial_continue_selector"
                android:focusable="true"
                android:nextFocusLeft="@id/prevTutorScreen"
                android:textColor="#004EFF"
                android:textSize="17sp" />

    </LinearLayout>

</RelativeLayout>

